packages/static_bits/tests/compile_fail/insert_bits_ct_invalid_range.zig
const bits = @import("static_bits");

comptime {
    _ = bits.bitfield.insertBitsCt(u8, 0x00, 0x01, 7, 2) catch unreachable;
}
